--- a/UserManagementIdentity/appsettings.json
+++ b/UserManagementIdentity/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ConnStr": "Server=HH-ST-AIO\\SQLEXPRESS;Database=user;Trusted_Connection=True;MultipleActiveResultSets=true" //office db
+    //"ConnStr": "Server=HH-ST-AIO\\SQLEXPRESS;Database=user;Trusted_Connection=True;MultipleActiveResultSets=true"  // home db
+  }
 }
