--- a/UserManagementIdentity/appsettings.json
+++ b/UserManagementIdentity/appsettings.json
@@ -9,5 +9,12 @@
   "ConnectionStrings": {
     "ConnStr": "Server=HH-ST-AIO\\SQLEXPRESS;Database=userManagementIdentity;Trusted_Connection=True;MultipleActiveResultSets=true" //office db
     //"ConnStr": "Server=HASIBUL\\SQLEXPRESS;Database=userManagementIdentity;Trusted_Connection=True;MultipleActiveResultSets=true" // home db
+  },
+  "EmailConfiguration": {
+    "From": "publictestmail@gmail.com",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 465,
+    "Username": "publictestmail@gmail.com",
+    "Passoword": "dofuuzmotonxyfup"
   }
 }
