--- a/UserManagementIdentity/UserManagementIdentity.csproj
+++ b/UserManagementIdentity/UserManagementIdentity.csproj
@@ -23,4 +23,8 @@
     <Folder Include="Models\Authentication\Login\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\UserManagementIdentity.Service\UserManagementIdentity.Service.csproj" />
+  </ItemGroup>
+
 </Project>
