--- a/UserManagementIdentity/appsettings.json
+++ b/UserManagementIdentity/appsettings.json
@@ -7,14 +7,14 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ConnStr": "Server=HH-ST-AIO\\SQLEXPRESS;Database=userManagementIdentity;Trusted_Connection=True;MultipleActiveResultSets=true" //office db
-    //"ConnStr": "Server=HASIBUL\\SQLEXPRESS;Database=userManagementIdentity;Trusted_Connection=True;MultipleActiveResultSets=true" // home db
+    //"ConnStr": "Server=HH-ST-AIO\\SQLEXPRESS;Database=userManagementIdentity;Trusted_Connection=True;MultipleActiveResultSets=true" //office db
+    "ConnStr": "Server=HASIBUL\\SQLEXPRESS;Database=userManagementIdentity;Trusted_Connection=True;MultipleActiveResultSets=true" // home db
   },
   "EmailConfiguration": {
-    "From": "publictestmail@gmail.com",
+    "From": "iamtheridu@gmail.com",
     "SmtpServer": "smtp.gmail.com",
     "Port": 465,
-    "Username": "publictestmail@gmail.com",
-    "Passoword": "dofuuzmotonxyfup"
+    "Username": "iamtheridu@gmail.com",
+    "Passoword": "sbcmrnukrwbrfgbv"
   }
 }
